[fix] flickering with mac safari

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ canvas{
   position: fixed;
   top: 50%;
   left: 50%;
-  z-index: -100;
+  z-index: -1000;
   transform: translateX(-50%) translateY(-50%);
 }
 
@@ -85,6 +85,7 @@ h1::after{
 }
 
 .card{
+  z-index: 100;
   background-color: rgba(12, 12, 12, 0.35);
   border: 1.5px solid rgba(90, 90, 90, 0.6);
   height: 200px;
